--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <meta name="title" content="Default Title" data-react-helmet="true">
   <meta name="description" content="Web site created using create-react-app" />
   <title>Devinside | Connecting Developers</title>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
 <body>
